# suregigz

./: .env  .gitignore  README.md  api.py  avx.py  package-lock.json  package.json  requirements.txt
app/: layout.tsx  page.tsx
app/admin/waitlist/: page.tsx
app/api/waitlist/: route.ts
app/clinet/: page.tsx
app/components/wallet/: ConnectWallet.tsx
app/landing/: page.tsx
app/lib/wallet/: WalletContext.tsx
app/onboarding/: page.tsx
app/onboarding/client/: page.tsx
app/onboarding/worker/: page.tsx
contract/: Cargo.toml
contract/src/: lib.rs
frontend/: .env  .gitignore  package-lock.json  package.json
frontend/app/: layout.tsx  page.tsx
frontend/app/api/client/: route.ts
frontend/app/api/worker/: route.ts
frontend/app/chat/: page.tsx
frontend/app/client/: page.tsx
frontend/app/components/: WaitlistModal.tsx
frontend/app/components/layout/: Footer.tsx  LayoutWrapper.tsx  Navbar.tsx
frontend/app/components/notifications/: NotificationButton.tsx
frontend/app/components/wallet/: ConnectWallet.tsx
frontend/app/dashboard/: page.tsx
frontend/app/gigs/: page.tsx
frontend/app/gigs/[id]/: page.tsx
frontend/app/lib/wallet/: WalletContext.tsx  wallet-config.ts
frontend/app/onboarding/client/: page.tsx
frontend/app/onboarding/worker/: page.tsx
frontend/app/payment/: page.tsx
frontend/app/payment/invoice/: page.tsx
near-intents/public/: .gitignore  package-lock.json  package.json
near-intents/public/src/app/: globals.css  page.tsx
near-intents/public/src/app/api/backend/: index.ts
(+23 files in other folders)
