[package]
name = "contract"
version = "0.1.0"
edition = "2021"
description = "Helpful functions and macros for developing smart contracts on NEAR Protocol."
repository = "https://github.com/<xxx>/<xxx>"
license = "GPL-3.0 OR Apache-2.0"
authors = ["Jacob Lindahl <jacob.lindahl@near.org>"]

[lib]
crate-type = ["cdylib", "rlib"]

[dependencies]
near-sdk = { version = "5.14", default-features = false, features = ["legacy"] }
near-sdk-contract-tools = "3.0.2"
thiserror = "1"

[dev-dependencies]
near-sdk = { version = "5.14", default-features = false, features = ["unit-testing", "legacy"] }
near-workspaces = { version = "0.20", features = ["unstable"] }
tokio = { version = "1.12.0", features = ["full"] }
serde_json = "1"
pretty_assertions = "1"
near-crypto = "0.21"

[features]
unstable = ["near-sdk/unstable"]

[profile.release]
codegen-units = 1
debug = false
lto = true
opt-level = "z"
overflow-checks = true
panic = "abort"

[package.metadata.near.reproducible_build]
image = "sourcescan/cargo-near:0.15.0-rust-1.86.0"
image_digest = "sha256:aad208b09976f643b56104cc6af87fbb03afadff2e76f9e5e3fa283969e15f8b"
passed_env = []
container_build_command = [
    "cargo",
    "near",
    "build",
    "non-reproducible-wasm",
    "--locked",
]
